--- a/ChecksumBypass.csproj
+++ b/ChecksumBypass.csproj
@@ -35,11 +35,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>C:\Users\Joaquin\Desktop\Melon30\MelonLoader\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>C:\Users\Joaquin\Desktop\Melon31\MelonLoader\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Il2Cppmscorlib">
+      <HintPath>C:\Users\Joaquin\Desktop\Melon31\MelonLoader\Managed\Il2Cppmscorlib.dll</HintPath>
+    </Reference>
     <Reference Include="MelonLoader">
-      <HintPath>C:\Users\Joaquin\Desktop\Melon30\MelonLoader\MelonLoader.dll</HintPath>
+      <HintPath>C:\Users\Joaquin\Desktop\Melon31\MelonLoader\MelonLoader.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -51,7 +54,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnhollowerBaseLib">
-      <HintPath>C:\Users\Joaquin\Desktop\Melon30\MelonLoader\Managed\UnhollowerBaseLib.dll</HintPath>
+      <HintPath>C:\Users\Joaquin\Desktop\Melon31\MelonLoader\Managed\UnhollowerBaseLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
